Remove warnings from app startup